<resources>
    <string name="app_name">AppDelivery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Профиль</string>
    <string name="menu_gallery">Заказы</string>
    <string name="password">ВАШ ПАРОЛЬ</string>
    <string name="autorization">ВХОД</string>
    <string name="login">Войти</string>
    <string name="reset_password">Я ЗАБЫЛ ПАРОЛЬ</string>

    <string name="email">ВАШ EMAIL</string>
    <string name="menu_slideshow">Связь с диспетчером</string>
</resources>