<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/testName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="69dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="69dp"
                android:gravity="center"
                android:text="@string/autorization"
                android:textColor="#000000"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="28dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="28dp"
                android:layout_weight="1"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/testName" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="28dp"
                android:layout_weight="1"
                android:text="@string/password"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userEmail" />

            <Button
                android:id="@+id/login"
                android:layout_width="267dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:layout_marginStart="44dp"
                android:layout_marginTop="240dp"
                android:layout_marginEnd="44dp"
                android:layout_weight="1"
                android:background="@drawable/purple"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userPassword" />

            <TextView
                android:id="@+id/registration"
                android:layout_width="192dp"
                android:layout_height="29dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="110dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/reset_password"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login" />



            <EditText
                android:id="@+id/userEmail"
                android:layout_width="0dp"
                android:layout_height="39dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/form"
                android:ems="10"
                android:gravity="center|center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="0dp"
                android:layout_height="39dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="28dp"
                android:background="@drawable/form"
                android:ems="10"
                android:gravity="center|center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>